--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,11 @@
         "outDir": "dist",
         "declaration": true,
         "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
         "strict": true,
         "skipLibCheck": true
     },
-    "include": ["container.ts"]
+    "include": [
+        "container.ts"
+    ]
 }
